Add gcp workflows and adjust PDL format (#1691)
* Add new workflow for gcp (#1687)
* Adjust format to PDL changes